--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "DEBUG=server:debug NODE_ENV=test mocha --timeout 10000 tests/",
+    "test": "DEBUG=server:debug NODE_ENV=test mocha --timeout 10000",
     "dev": "DEBUG=server:debug NODE_ENV=development nodemon server.js"
   },
   "author": "",
@@ -17,13 +17,12 @@
     "geolib": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7",
+    "sequelize": "^6.3.5",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^8.2.1",
-    "supertest": "^6.1.1"
+    "mocha": "^8.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
